--- a/Introducao_a_filoinformatica.Rmd
+++ b/Introducao_a_filoinformatica.Rmd
@@ -3947,6 +3947,8 @@ plot(tree1)
 
 <br>
 
+**Clado das Fixadoras de Nitrogênio (clado CFN)** FABA-ROSA-CUCU-FAGA
+
 ```{r}
 library(ape)
 
@@ -3968,61 +3970,44 @@ if(length(busca_clado) > 1){
   
 }
 
+apg.tree$node.label[node]
+
 tree <- extract.clade(phy = apg.tree, node = node)
 
 plot(tree)
-```
 
-
-```{r}
-nome <- "fabales"
-  
-busca_clado <- grep(nome, plants.tree$node.label)
-
-plants.tree$node.label[busca_clado]
-
-if(length(busca_clado) > 1){
-  
-  node <- max(busca_clado + length(plants.tree$tip.label))
-  
-} else {
-  
-  node <- busca_clado + length(plants.tree$tip.label)
-  
-}
-
-tree <- extract.clade(phy = plants.tree, node = node)
-
-plot(tree)
-```
-**Clado das Fixadoras de Nitrogênio (clado CFN)** FABA-ROSA-CUCU-FAGA
-
-```{r}
-tree <- extract.clade(phy = plants.tree, node = 565)
-plot(tree)
 nodelabels(tree$node.label, frame = "none", cex = 0.7)
+
 ```
 
 **Ordem Fabales**
 
 ```{r}
-tree <- extract.clade(phy = plants.tree, node = 566)
+nome <- "fabales"
+  
+busca_clado <- grep(nome, apg.tree$node.label)
+
+apg.tree$node.label[busca_clado]
+
+if(length(busca_clado) > 1){
+  
+  node <- max(busca_clado + length(apg.tree$tip.label))
+  
+} else {
+  
+  node <- busca_clado + length(apg.tree$tip.label)
+  
+}
+
+apg.tree$node.label[node]
+
+tree <- extract.clade(phy = apg.tree, node = node)
+
 plot(tree)
 nodelabels(tree$node.label, frame = "none", cex = 0.7)
+
 ```
 
-
-nome <- "lamiales"
-
-busca_nome <- grep(nome, plants.tree$node.label)
-
-busca_edge <- grep(busca_nome, plants.tree$edge[, 2])
-
-busca_node <- plants.tree$edge[busca_edge, 1]
-
-tree <- extract.clade(phy = plants.tree, node = busca_node)
-
-plot(tree)
 
 # GeneBank (NCBI)
 
